--- a/AutoRepairService.WPF/MainWindow.xaml
+++ b/AutoRepairService.WPF/MainWindow.xaml
@@ -5,15 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AutoRepairService.WPF"
         xmlns:vm="clr-namespace:AutoRepairService.WPF.ViewModels"
+        xmlns:v ="clr-namespace:AutoRepairService.WPF.Views"
         xmlns:custom="clr-namespace:ModalControl;assembly=ModalControl"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.Resources>
+        <DataTemplate DataType="{x:Type vm:ClientListingViewModel}">
+            <v:ClientListnigViewModel/>
+        </DataTemplate>
+    </Window.Resources>
     <Grid>
         <ContentControl
             Content="{Binding CurrentViewModel}"/>
 
         <custom:Modal Panel.ZIndex="1" IsOpen="{Binding IsOpen}">
-            <ContentControl Content="{Binding CuurentModalViewModel}"/>
+            <ContentControl Content="{Binding CurrentModalViewModel}"/>
         </custom:Modal>
     </Grid>
 </Window>
