--- a/AutoRepairService.WPF/Views/ClientListnigViewModel.xaml
+++ b/AutoRepairService.WPF/Views/ClientListnigViewModel.xaml
@@ -18,9 +18,17 @@
             </DataGrid.Columns>
         </DataGrid>
 
+        <TextBlock
+            Grid.Row="1"
+            HorizontalAlignment="Left">
+            <Run Text="{Binding Cursor}"/>
+            <Run Text="из"/>
+            <Run Text="{Binding RecordsCount}"/>
+        </TextBlock>
         <DockPanel
             Grid.Row="1"
             Width="200"
+            TextBlock.TextAlignment="Center"
             HorizontalAlignment="Center">
             <Button
                 HorizontalAlignment="Left"
@@ -28,8 +36,9 @@
                 Content= "&lt;"
                 Width="30"/>
             <TextBlock
+                Margin="50 0 0 0"
                 HorizontalAlignment="Center">
-                <Run Text="{Binding CurrentPage}"/>
+                <Run Text="{Binding CurrentPage,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <Run Text=" - "/>
                 <Run Text="{Binding TotalPage}"/>
             </TextBlock>
