--- a/AutoRepairService.WPF/Views/ClientDetailsFormView.xaml
+++ b/AutoRepairService.WPF/Views/ClientDetailsFormView.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="AutoRepairService.WPF.Components.ClientDetailForm"
+﻿<UserControl x:Class="AutoRepairService.WPF.Views.ClientDetailsFormView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:AutoRepairService.WPF.Components"
+             xmlns:local="clr-namespace:AutoRepairService.WPF.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock>Hello</TextBlock>
+        <TextBlock Text="{Binding Client.Id}"/>
     </Grid>
 </UserControl>
