--- a/AutoRepairService.WPF/Views/ClientDetailsFormView.xaml
+++ b/AutoRepairService.WPF/Views/ClientDetailsFormView.xaml
@@ -7,6 +7,30 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <TextBlock Text="{Binding Client.Id}"/>
+        <UniformGrid Columns="2" Rows="5">
+            <TextBlock 
+                Grid.Column="0"
+                Grid.Row="0"
+                Text="Id"
+                HorizontalAlignment="Right"
+                VerticalAlignment="Center"/>
+
+            <TextBox
+                Grid.Column="1"
+                Grid.Row="0"
+                Height="30"
+                Width="200"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Text="{Binding Email}"/>
+            <TextBox
+                Grid.Column="1"
+                Grid.Row="0"
+                Height="30"
+                Width="200"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                Text="{Binding FirstName}"/>
+        </UniformGrid>
     </Grid>
 </UserControl>
