--- a/AutoRepairService.WPF/Views/ClientListnigView.xaml
+++ b/AutoRepairService.WPF/Views/ClientListnigView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="AutoRepairService.WPF.Views.ClientListnigViewModel"
+﻿<UserControl x:Class="AutoRepairService.WPF.Views.ClientListnigView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
