--- a/AutoRepairService.WPF/Views/ClientDetailsFormView.xaml
+++ b/AutoRepairService.WPF/Views/ClientDetailsFormView.xaml
@@ -4,34 +4,47 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AutoRepairService.WPF.Views"
-             xmlns:ma="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <UniformGrid Columns="2" Rows="5">
-            <TextBlock 
-                Grid.Column="0"
-                Grid.Row="0"
-                Text="Id"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Center"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+        </Grid.RowDefinitions>
+        
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-            <TextBox
-                Grid.Column="1"
-                Grid.Row="0"
+                <StackPanel Grid.Column="0"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center">
+
+
+                    <TextBox
+                Grid.Column="0"
                 Height="30"
                 Width="200"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 Text="{Binding Email}"/>
-            <TextBox
+
+                    <TextBox
                 Grid.Column="1"
                 Grid.Row="0"
                 Height="30"
                 Width="200"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
-                Text="{Binding FirstName}"/>
-        </UniformGrid>
+                Text="{Binding FirstName,
+                    ValidatesOnExceptions=True,
+                    ValidatesOnDataErrors=True, 
+                    UpdateSourceTrigger=PropertyChanged, 
+                    NotifyOnValidationError=True}"/>
+
+                </StackPanel>
+            </Grid>
     </Grid>
 </UserControl>
