--- a/AutoRepairService.WPF/Components/ClientListingItem.xaml
+++ b/AutoRepairService.WPF/Components/ClientListingItem.xaml
@@ -37,7 +37,8 @@
                 <Button
                     Background="Transparent"
                     BorderThickness="0"
-                    Margin="20 0 0 0">
+                    Margin="20 0 0 0"
+                    Command="{Binding DeleteClientCommand}">
                     <fa:IconImage
                         Foreground="White"
                         Icon="Trash" 
